# timegpt_v2

./: .editorconfig  .gitignore  .mcp.json  .mcp.json.save  .pre-commit-config.yaml  20251011_enhancement_plan.md  20251014_Sprint_Plan_Fix_Data_Loading_Mismatch.md  20251014_date_issue_prompt.md  20251015_model_enhancement_prompt.md  30MINUTE_IMPLEMENTATION_SUMMARY.md  30MINUTE_OPTIMIZATION_GUIDE.md  BACKWARD_COMPATIBILITY.md  CHANGELOG_30MINUTE_OPTIMIZATION.md  CLAUDE.md  CLI_PARAMETER_GUIDE.md  EXTENDED_DURATION_GUIDE.md  Exog_Parity_Fix_Sprint_Plan.md  GEMINI.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  SPRINTS.md  SYSTEM_TECH_DOC.md  TIMEGPT_HORIZON_ANALYSIS.md  TIMEGPT_MODELS_ANALYSIS.md  TSLA_FEB2024_CORRECTED_COMMANDS.md  TimeGPTv2_feature_sprint_plan.md  cli_demo.sh  codex.config.yaml  forensic_audit.py  migrate_config.py  prompt.md  pyproject.toml  runbook_aug_nov_2024.md  smoke.py  test_backtest_cli.py  test_backward_compatibility.py  test_boundary_simple.py  test_cli_params.py  test_compatibility_simple.py  (+7 more)
configs/: backtest.yaml  backtest_tsla.yaml  data.yaml  dq_policy.yaml  forecast.yaml  forecast_grid.yaml  forecast_smoke.yaml  forecast_smoke_online.yaml  forecast_tsla_online.yaml  trading.yaml  trading_30m_optimized.yaml  trading_extended.yaml  trading_smoke.yaml  trading_tsla_30m.yaml  universe.yaml  universe_backtest.yaml  universe_backtest_tsla.yaml  universe_feb2025.yaml  universe_smoke.yaml  universe_tsla_feb2024.yaml
configs_test/: data.yaml  dq_policy.yaml  forecast.yaml  forecast_minimal.yaml  universe.yaml  universe_minimal.yaml
docs/: ADVANCED_FEATURES.md  ARCHITECTURE.md  DATA_QUALITY.md  EVALUATION.md  FORECASTING.md  TRADING_RULES.md  build.md  (+2 more)
(+89 files in other folders)
