[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "timegpt_v2"
version = "0.1.0"
description = "TimeGPT Intraday v2 platform"
authors = [{name = "TimeGPT Team"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
  "typer[all]>=0.12",
  "pandas>=2.1",
  "numpy>=1.24",
  "pydantic>=2.6",
  "gcsfs>=2024.3.1",
  "pyarrow>=15.0",
  "python-dateutil>=2.8",
  "tzdata>=2024.1",
  "rich>=13.7",
  "structlog>=24.1",
  "fsspec>=2024.3.1",
  "PyYAML>=6.0",
  "typing_extensions>=4.12",
  "pandas_market_calendars>=4.3.3",
]

[project.optional-dependencies]
dev = [
  "black>=24.4.0",
  "isort>=5.13.2",
  "ruff>=0.6.0",
  "mypy>=1.10.0",
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "hypothesis>=6.98.0",
  "pandas-stubs>=2.1.4.231227",
  "types-python-dateutil>=2.9.0.20240316",
  "types-PyYAML>=6.0.12",
]

[project.urls]
homepage = "https://example.com/timegpt_v2"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
extend-exclude = ["sip_pipeline_local.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "N", "S"]
ignore = ["S101"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict_optional = false
warn_unused_configs = true
ignore_missing_imports = true
packages = ["timegpt_v2"]
explicit_package_bases = true

[tool.coverage.run]
source = ["timegpt_v2"]
branch = true
